[gd_scene load_steps=8 format=3 uid="uid://e7fhvuexigqi"]

[ext_resource type="Script" path="res://scene/menu.gd" id="1_ed1s1"]
[ext_resource type="Texture2D" uid="uid://c81kvswxbb2rx" path="res://asset/Free Pixel Art Forest/Preview/Background.png" id="3_6ywf4"]
[ext_resource type="FontFile" uid="uid://dlqfvpk8hfxdv" path="res://asset/alagard.ttf" id="3_lfh3c"]
[ext_resource type="Theme" uid="uid://c12v04fx7jsf5" path="res://theme/button.tres" id="4_lm6o7"]
[ext_resource type="Theme" uid="uid://bda7pi7nqsh1s" path="res://theme/button_kecil.tres" id="5_e54fe"]
[ext_resource type="Texture2D" uid="uid://4thyrfugd0em" path="res://asset/kenney_ui-pack-rpg-expansion/PNG/126472.png" id="6_jd7o2"]
[ext_resource type="PackedScene" uid="uid://cap38fjc7vrta" path="res://scene/main menu/settings.tscn" id="7_1brfh"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ed1s1")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(323, 135.938)
scale = Vector2(0.704203, 0.469262)
texture = ExtResource("3_6ywf4")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 371.0
offset_top = 58.0
offset_right = 625.0
offset_bottom = 175.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_lfh3c")
theme_override_font_sizes/font_size = 60
text = "ALTERED
FOREST"
horizontal_alignment = 2

[node name="Lanjut" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 536.0
offset_top = 240.0
offset_right = 628.0
offset_bottom = 297.0
theme = ExtResource("4_lm6o7")
text = "Lanjut"
icon_alignment = 1

[node name="Mulai" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 420.0
offset_top = 240.0
offset_right = 512.0
offset_bottom = 297.0
theme = ExtResource("4_lm6o7")
text = "Mulai
"
icon_alignment = 1

[node name="save" type="Button" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 256.0
offset_right = 113.0
offset_bottom = 294.0
pivot_offset = Vector2(19, 19)
theme = ExtResource("5_e54fe")
text = "c"
icon_alignment = 1

[node name="close" type="Button" parent="."]
layout_mode = 0
offset_left = 124.0
offset_top = 256.0
offset_right = 162.0
offset_bottom = 294.0
pivot_offset = Vector2(19, 19)
theme = ExtResource("5_e54fe")
text = "x"
icon_alignment = 1

[node name="Setting2" type="Button" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 256.0
offset_right = 65.0
offset_bottom = 294.0
pivot_offset = Vector2(19, 19)
theme = ExtResource("5_e54fe")
toggle_mode = true
icon_alignment = 1

[node name="126472" type="Sprite2D" parent="Setting2"]
position = Vector2(19, 19)
scale = Vector2(0.0455664, 0.0454443)
texture = ExtResource("6_jd7o2")

[node name="Setting" parent="." instance=ExtResource("7_1brfh")]
layout_mode = 1
offset_left = 27.0
offset_top = 150.0
offset_right = 27.0
offset_bottom = 150.0

[connection signal="pressed" from="Lanjut" to="." method="_on_lanjut_pressed"]
[connection signal="pressed" from="Mulai" to="." method="_on_mulai_pressed"]
[connection signal="pressed" from="Mulai" to="." method="_on_button_pressed"]
[connection signal="pressed" from="save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
[connection signal="toggled" from="Setting2" to="." method="_on_setting_2_toggled"]
